fixed FontAwesome icons clipping into header line in course view

--- a/Darklearning.user.css
+++ b/Darklearning.user.css
@@ -2075,7 +2075,12 @@ rbarshape(name,mod){
 		background-image:linear-gradient(to bottom,pb 0,pb irad,#0000 irad);
 		color:txt !important;//fuuck whyy
 		border-radius:irad irad 0 0;
-		& .fa{color:txt}
+		& .fa::before{
+			color:txt;
+			padding:0.25em 0;
+			vertical-align:baseline;
+			line-height:initial;
+		}
 	}
 }
 @-moz-document regexp("https?://elearning\\.tgm\\.ac\\.at/user/files\\.php.*?") {
